--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "projeto",
+  "name": "fronttraining",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "alert": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "ejs": "^3.1.8",
+    "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "popups": "^1.1.3"
+    "morgan": "~1.9.1"
   }
 }
